fixed a bug where correct and wrong were not showing for the answers

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -29,6 +29,7 @@ header a:visited {
 
 main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     color: var(--fontColor);
 }
@@ -37,6 +38,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .start-title {
@@ -65,7 +67,7 @@ main {
     border-radius: 10px;
     font-size: 20px;
     font-weight: bold;
-    flex-basis: 1;
+    width: 15%;
 }
 
 .start-btn:hover {
